--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,13 @@
         "php": ">=5.3.0",
         "filp/whoops": "*",
         "symfony/var-dumper": "*",
-        "catfan/medoo":"*"
+        "catfan/medoo":"*",
+        "twig/twig":"*"
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.phpcomposer.com"
+        }
     }
 }
